--- a/package.json
+++ b/package.json
@@ -10,15 +10,29 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/art": "^1.2.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "react": "17.0.2",
     "react-native": "0.66.1",
+    "react-native-animatable": "^1.3.3",
+    "react-native-camera": "^4.2.1",
+    "react-native-chart-kit": "^6.11.0",
+    "react-native-circular-gradient-progress": "^1.0.6",
+    "react-native-circular-progress": "^1.3.7",
+    "react-native-circular-progress-indicator": "^2.0.4",
+    "react-native-permissions": "^3.1.0",
+    "react-native-pie": "^1.1.2",
+    "react-native-qrcode-scanner": "^1.5.4",
+    "react-native-raw-bottom-sheet": "^2.2.0",
+    "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
+    "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.0.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "victory-native": "^36.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
