--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-circular-gradient-progress": "^1.0.6",
     "react-native-circular-progress": "^1.3.7",
     "react-native-circular-progress-indicator": "^2.0.4",
+    "react-native-flash-message": "^0.2.0",
     "react-native-multiple-select": "^0.5.7",
     "react-native-paper": "^4.10.1",
     "react-native-permissions": "^3.1.0",
